# komorebi-switcher

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  audit.toml  build.rs  installer.nsi  scoop-template.json
.cargo/: audit.toml
.github/workflows/: audit.yml  build.yml  fmt.yml  lint.yml  release.yml  test.yml
.scripts/: build.ps1  create-installer.ps1  generate-release-notes.ps1  release.ps1
installer/: installer.nsi
src/: _egui_glue.rs  app.rs  host.rs  komorebi.rs  main.rs  main_window.rs  multi_map.rs  options.rs  resize_window.rs  state.rs  taskbar.rs  tray_icon.rs  utils.rs  window_registry_info.rs
src/dcomp/: dcomp_surface.rs  dcomp_window.rs  mod.rs
src/egui_dcomp/: dcomp_surface.rs  egui_dcomp_renderer.rs  egui_window.rs  mod.rs
src/egui_glue/: dx12_surface.rs  egui_renderer.rs  egui_view.rs  egui_window.rs  mod.rs  wgpu_surface.rs
src/glazewm/: client.rs  mod.rs
src/komorebi/: client.rs  mod.rs
src/utils/: mod.rs
src/widgets/: mod.rs  workspace_button.rs
src/windows/: mod.rs  resize.rs
src/windows/switcher/: host.rs  mod.rs
