[package]
name = "komorebi-switcher"
description = "A minimal workspace switcher for the Komorebi tiling window manager, seamlessly integrated into Windows 10/11 taskbar."
authors = ["amrbashir <github@amrbashir.me>"]
version = "0.4.2"
edition = "2021"
license = "MIT"

[package.metadata.winresource]
CompanyName = "amrbashir"
LegalCopyright = "© 2025 amrbashir. Licensed under the MIT License."

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[build-dependencies]
winresource = "0.1"

[dependencies]
anyhow = "1"
winit = "0.30"
raw-window-handle = "0.6"
egui = "0.31"
egui-winit = "0.31"
egui-wgpu = "0.31"
wgpu = "24.0"
pollster = "0.4"
serde_json = "1.0"
windows-registry = "0.4"
muda = "0.15"
uds_windows = "1.1"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
egui_animation = "0.8"


[patch.crates-io]
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "2f607d3e64d5da618b30c084fb59cf3abacf9aa1" }

[dependencies.windows]
version = "0.60"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "UI_ViewManagement",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Dxgi_Common",
  "Win32_UI_HiDpi",
]
