[package]
name = "glazewm-switcher"
version = "0.1.0"
description = "A minimal workspace switcher for GlazeWM tiling window manager, seamlessly integrated into Windows 10/11 taskbar."
authors = ["khaimed"]
edition = "2021"
license = "MIT"

[package.metadata.winresource]
CompanyName = "khaimed"
LegalCopyright = "© 2025 khaimed. Original by Amr Bashir (MIT)."

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[build-dependencies]
winresource = "0.1"

[dependencies]
anyhow = "1"
winit = "0.30"
raw-window-handle = "0.6"
egui = "0.32"
egui-winit = "0.32"
egui-wgpu = "0.32"
wgpu = "25.0"
pollster = "0.4"
serde_json = "1.0"
windows-registry = "0.5"
muda = "0.17"
tray-icon = "0.21"
uds_windows = "1.1"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.27", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
egui_animation = "0.9"
rfd = "0.15.3"

[dependencies.windows]
version = "0.61"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_Input_KeyboardAndMouse",
  "UI_ViewManagement",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectComposition",
  "Win32_Graphics_Dxgi_Common",
  "Win32_UI_HiDpi",
]
